--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,3 +11,4 @@ bind-key s command-prompt -p "Send pane to:" "join-pane -t :'%%'"
 set-window-option -g mode-keys vi
 set-option -sg escape-time 10
 set-option -g focus-events on
+set-option -a terminal-features 'xterm-256color:RGB'
