--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,13 +2,17 @@ set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
 
-set -g history-limit 10
-set -g allow-rename off
-
-bind-key j command-prompt -p "Join pan from:" "join-pane -s :'%%'"
-bind-key s command-prompt -p "Send pane to:" "join-pane -t :'%%'"
+set -g history-limit 1000
 
 set-window-option -g mode-keys vi
 set-option -sg escape-time 10
+
+set -g default-terminal "tmux-256color"
+set -g terminal-features ",xterm-kitty:RGB"
+
+set -g mouse on
+set-option -g renumber-windows on
 set-option -g focus-events on
-set-option -a terminal-features 'xterm-256color:RGB'
+set -g @catppuccin_flavor 'mocha'
+
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
