--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,7 @@ set-window-option -g mode-keys vi
 set-option -sg escape-time 10
 
 set -g default-terminal "tmux-256color"
-set -g terminal-features ",xterm-kitty:RGB"
+set -g terminal-features ",xterm-ghostty:RGB"
 
 set -g mouse on
 set-option -g renumber-windows on
